update portfolio image

--- a/portfolio-dev/src/pages/index.astro
+++ b/portfolio-dev/src/pages/index.astro
@@ -14,7 +14,7 @@ import Projects from "../components/Projects.astro";
 
 <Layout
 	title="Portfolio of Tano - Web Developer and Programmer"
-	description="Hire Tano to create your web or mobile application.web developer and graphic designer. Specialized in creating unique applications."
+	description="Hire Tano to create your web or mobile application.web developer and graphic designer. Specialized in Stack MERN, currently working on new projects and with new technologies."
 >
 	<main class="px-4">
 		<SectionContainer id="sobre-mi" class="py-44 pb-32">
@@ -50,7 +50,8 @@ import Projects from "../components/Projects.astro";
 						Germany.</span
 					>
 					<span class="opacity-75"
-						>Specialised in creating unique applications.
+						>Specialized in MERN-Stack, currently working on new
+						projects and with new technologies.
 					</span>
 				</span>
 			</h2>
