--- a/portfolio-dev/src/components/Experience.astro
+++ b/portfolio-dev/src/components/Experience.astro
@@ -4,7 +4,7 @@ const EXPERIENCE = [
     {
         date: "Currently...",
         company: "Synqple App",
-        title: "Fullstack Web Developer + Graphic Designer",
+        title: "Fullstack Web Developer",
         description: "Fullstack audio web application development",
         link: "#",
     },
@@ -20,9 +20,8 @@ const EXPERIENCE = [
     {
         date: " October 2023",
         company: "Zwocar GmbH",
-        title: "Fullstack Web Developer + Graphic Designer + Digital Marketing",
-        description:
-            "Fullstack web development, graphic design with Adobe Creative and digital marketing for a renewable energy startup.",
+        title: "Fullstack Web Developer + Digital Marketing",
+        description: "Fullstack web development.",
         link: "#",
     },
 ];
