--- a/portfolio-dev/src/pages/index.astro
+++ b/portfolio-dev/src/pages/index.astro
@@ -43,8 +43,9 @@ import Projects from "../components/Projects.astro";
 				<span>
 					+2 years of experience.
 					<span class="text-yellow-200/90"
-						>Fullstack Web Developer and Graphic Designer.</span
+						>Fullstack Web Developer.</span
 					>
+					<br />
 					<span class="text-red-200/90"
 						>From Cadiz, Spain but currently living in Kassel,
 						Germany.</span
